[tool.poetry]
name = "pipen-log2file"
version = "0.7.0"
description = "Add verbosal information in logs for pipen."
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pipen-log2file"
repository = "https://github.com/pwwang/pipen-log2file"

[tool.poetry.dependencies]
python = "^3.9"
pipen = "^0.14"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dev-dependencies]
pipen-args = "^0.14"
pytest = "^7"
pytest-cov = "^4"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins.pipen]
log2file = "pipen_log2file:log2file_plugin"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef"]
show_error_codes = true
strict_optional = false

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
