[project]
name = "pipen-log2file"
dynamic = ["version"]
description = "Add verbosal information in logs for pipen."
authors = [{name = "pwwang", email = "pwwang@pwwang.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pipen>=1.1,<1.2; python_version>='3.9'",
]

[tool.hatch.version]
path = "pipen_log2file.py"

[dependency-groups]
dev = [
    "pipen-args>=1.2",
    "pytest>=8",
    "pytest-cov>=6",
]
examples = [
    "panpath[async-gs]>=0.4",
    "python-dotenv>=1",
]

[project.urls]
Homepage = "https://github.com/pwwang/pipen-log2file"
Repository = "https://github.com/pwwang/pipen-log2file"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points.pipen]
log2file = "pipen_log2file:log2file_plugin"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef"]
show_error_codes = true
strict_optional = false

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
